<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fingerboard Trainer</string>
    <string name="action_history">History</string>
    <string name="action_notification">Notifications</string>
    <string name="action_donate">Donate</string>
    <string name="action_donate_remove_ads">Donate / Remove ads</string>
    <string name="initial_hang_time">8</string>
    <string name="initial_pause_time">8</string>
    <string name="initial_repetitions">3</string>
    <string name="initial_rest_time">480</string>
    <string name="initial_total_repetitions">3</string>
    <string name="hang_time">Hang time (mm:ss)</string>
    <string name="pause_time">Pause time (mm:ss)</string>
    <string name="repetitions">Rounds</string>
    <string name="rest_time">Rest time (minutes)</string>
    <string name="total_repetitions">Set</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="title_activity_history">History</string>
    <string name="silent">Silent</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="rate_app">Rate Application</string>
    <string name="rate_app_text">Show your support for Fingerboard Trainer by leaving a review on Play Store.</string>
    <string name="later">Later</string>
    <string name="close_app">Close App</string>
    <string name="close_app_text">This will stop the workout and close the app. If you are just resting and want to use the phone while waiting, press Home instead of Back key.</string>
    <string name="exit">Exit</string>
    
    <string name="say_start">Start!</string>
    <string name="say_stop">Stop!</string>
    <string name="say_get_ready">Get ready!</string>
    <string name="say_good_job">Good job!</string>

</resources>