<com.sleepyduck.fingerboardtrainer.MainLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onStartClicked"
        android:text="@string/start" />

    <EditText
        android:id="@+id/hang_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/hang"
        android:gravity="center"
        android:inputType="phone|number"
        android:selectAllOnFocus="true"
        android:text="@string/initial_hang_time"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/pause_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone|number"
        android:selectAllOnFocus="true"
        android:text="@string/initial_pause_time" />

    <EditText
        android:id="@+id/repetitions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone|number"
        android:selectAllOnFocus="true"
        android:text="@string/initial_repetitions" />

    <EditText
        android:id="@+id/rest_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone|number"
        android:selectAllOnFocus="true"
        android:text="@string/initial_rest_time" />

    <EditText
        android:id="@+id/total_repetitions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone|number"
        android:selectAllOnFocus="true"
        android:text="@string/initial_total_repetitions" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

</com.sleepyduck.fingerboardtrainer.MainLayout>